Update Db4oLiteTest.java